# auto-git-commit-message

./: README.md  git_diff_llm.py  make_commit_message.zsh  pyproject.toml  server_utils.py
src/auto_commit_message/: git_diff_llm.py  server_utils.py
