[project]
name = "auto-commit-message"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langchain-ollama>=0.3.8",
    "psutil>=7.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]